--- a/docs/css/screen.css
+++ b/docs/css/screen.css
@@ -31,10 +31,12 @@ nav { margin-top: 1em; }
 footer {
   position:fixed;
   bottom:0;
-  padding:1em;
+  padding:5px;
+  width:100%;
   color:#888;
-  text-align:center;
+  text-align:left;
   font-size:75%;
+  background:rgba(255,255,255,.9);
 }
 
 .abstract-toggle {
