--- a/docs/css/screen.css
+++ b/docs/css/screen.css
@@ -3,8 +3,12 @@
 body {
   padding: 10px;
   font-size: 12pt;
-  font-family: Open Sans, Helvetica, Arial, sans serif;
-  line-height: 1.4em;
+  font-family: Helvetica Neue, Helvetica, Open Sans, Arial, sans serif;
+  line-height: 1.3em;
+}
+
+.para {
+  line-height: 1.7em
 }
 
 hr {
