--- a/docs/css/screen.css
+++ b/docs/css/screen.css
@@ -1,116 +1,35 @@
 @import url("hk-pyg.css");
 
-body {
-  padding: 10px;
-  font-size: 12pt;
-  font-family: Helvetica Neue, Helvetica, Open Sans, Arial, sans serif;
-  line-height: 1.3em;
-}
+body { padding-top: 60px;       /* make room for top-fixed navbar */
+       font-size: 12pt;
+       font-family: Helvetica Neue, Helvetica, Arial, sans serif;
+       line-height: 1.3em; }
 
-.para {
-  line-height: 1.7em
-}
+h1 { font-family: inherit; font-size: 25pt; }
 
-hr {
-  height:5px;
-  border:none;
-  color:#eee;
-  background-color:#eee
-}
+/*main { max-width: 50em; }*/
 
-blockquote {
-  font-size: 11pt!important;
-  display:none
-}
+footer { position:fixed;
+         bottom:0;
+         padding:2px;
+         width:100%;
+         color:#888;
+         text-align:left;
+         font-size:75%;
+         background:rgba(255,255,255,.9); }
 
-header h1 { font-size: 30pt; }
+.para { line-height: 1.6em }
 
-main {
-  max-width: 50em;
-  /*border-left: 1px solid grey;*/
-}
+hr { height:3px; border:none; color:#eee; background-color:#eee; }
 
-nav { margin-top: 1em; }
+blockquote { font-size: 11pt!important; display:none; }
 
-footer {
-  position:fixed;
-  bottom:0;
-  padding:5px;
-  width:100%;
-  color:#888;
-  text-align:left;
-  font-size:75%;
-  background:rgba(255,255,255,.9);
-}
+.abstract-toggle { float:right; cursor:pointer; }
 
-.abstract-toggle {
-  float:right;
-  cursor:pointer;
-  color:#337ab7
-}
+.abstract-toggle:hover { text-decoration: none; color: #eee }
 
-.abstract-toggle:hover {
-  color:#23527c;
-}
+.me { border-bottom: 1px dotted rgba(0,0,0,.15); }
 
-.me {
-  border-bottom: 1px dotted rgba(0,0,0,.15);
-}
+ul { list-style-type: square }
 
-ul {
-  list-style-type: square
-}
-
-ol li {
-  padding: 7px
-}
-
-.navbar-default { background-color: transparent; border: none; }
-
-/* Tree menus */
-.nav-header:after {
-content: "\00A0\25BE";
-}
-li > ul.tree {
-  padding-left: 10px;
-}
-
-/* collapse menu at "small" size rather than phone size */
-@media (max-width: 991px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-        margin: 7.5px -15px;
-    }
-    .navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .navbar-text {
-        float: none;
-        margin: 15px 0;
-    }
-    /* since 3.1.0 */
-    .navbar-collapse.collapse.in {
-        display: block!important;
-    }
-    .collapsing {
-        overflow: hidden!important;
-    }
-}
-
+ol li { padding: 7px }
