--- a/files/css/screen.css
+++ b/files/css/screen.css
@@ -1,28 +1,24 @@
 @import url("hk-pyg.css");
 
-body { padding-top: 60px;       /* make room for top-fixed navbar */
-       font-size: 12pt;
-       font-family: Helvetica Neue, Helvetica, Arial, sans serif;
-       line-height: .75em; }
+body { padding-top: 60px;
+       /*font-family: Helvetica Neue, Helvetica, Arial, sans serif;*/ }
 
 h1 { font-family: inherit; font-size: 25pt; }
 
 /*main { max-width: 50em; }*/
 
-footer { position:fixed;
+footer { /*position:fixed;
          bottom:0;
          padding:2px;
          width:100%;
          color:#888;
          text-align:left;
          font-size:8pt!important;
-         background:rgba(255,255,255,.9); }
-
-.para { line-height: 1.6em }
+         background:rgba(255,255,255,.9);*/ display: none }
 
 hr { height:3px; border:none; color:#eee; background-color:#eee; }
 
-blockquote { font-size: 11pt!important; display:none; line-height:1.3em }
+blockquote { font-size: inherit; display: none; }
 
 .abstract-toggle { float:right; cursor:pointer; }
 
@@ -32,4 +28,6 @@ blockquote { font-size: 11pt!important; display:none; line-height:1.3em }
 
 ul { list-style-type: square }
 
-ol li { padding: 7px }
+ol li { padding: 4px }
+
+li > p { margin: 4px }
