trying another theme

--- a/docs/css/screen.css
+++ b/docs/css/screen.css
@@ -1,9 +1,9 @@
 @import url("hk-pyg.css");
 
-body { padding-top: 60px;
+body { padding-top: 65px;
        /*font-family: Helvetica Neue, Helvetica, Arial, sans serif;*/ }
 
-h1 { font-family: inherit; font-size: 25pt; }
+h1 { font-family: inherit; font-size: 22pt; }
 
 /*main { max-width: 50em; }*/
 
@@ -22,7 +22,7 @@ blockquote { font-size: inherit; display: none; }
 
 .abstract-toggle { float:right; cursor:pointer; }
 
-.abstract-toggle:hover { text-decoration: none; color: #eee }
+.abstract-toggle:hover { text-decoration: none;  }
 
 .me { border-bottom: 1px dotted rgba(0,0,0,.15); }
 
