--- a/docs/css/screen.css
+++ b/docs/css/screen.css
@@ -1,8 +1,8 @@
 @import url("hk-pyg.css");
 
 body { padding-top: 70px;
-       font-size: 14px;
-       line-height: 1.42857143; }
+       /*font-size: 14px;
+       line-height: 1.42857143;*/ }
 
 h1 { font-family: inherit; font-size: 22pt; }
 
